--- a/lasagna.html
+++ b/lasagna.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
     <h1>lasagna</h1>
     <a href="index.html">Homepage</a>
+    <br>
+    <img src="src/lasagna.jpg" alt="prepared lasagna" height="400">
+    <h2>How to Make Lasagna</h2>
+    
+    <p>
+        Making lasagna can be time-consuming, but the results are well worth the wait.
+    </p>
+    <p>
+        You'll find a detailed ingredient list and step-by-step instructions in the recipe below.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and Garlic</li>
+        <li>Tomato Products</li>
+        <li>Sugar</li>
+        <li>Spices and Seasoning</li>
+        <li>Lasagna noodles</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
+
+
 </body>
 </html>
