add koshary recipe and image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 <body>
 
     <h1>Odin Recipes</h1>
-    <a href="lasagna.html">Lasagna recipe</a>
+    <ul>
+        <li>
+            <a href="lasagna.html">Lasagna recipe</a>
+        </li>
+        <li>
+            <a href="koshary.html">Koshary recipe</a>
+        </li>
+        <li>
+            
+        </li>
+    </ul>
+    <br>
 </body>
 </html>
