Add Baked Chicken Schnitzel html file and image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="koshary.html">Koshary recipe</a>
         </li>
         <li>
-            
+            <a href="baked-chicken-schnitzel.html">Baked Chicken Schnitzel</a>
         </li>
     </ul>
     <br>
